--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://{tuhituhi18}.github.io/{User-Directory}",
+  "homepage": "https://tuhituhi18.github.io/User-Directory",
   "name": "userdirectory",
   "version": "0.1.0",
   "private": true,
