removed servicworker files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://tuhituhi18.github.io/User-Directory",
-  "name": "userdirectory",
+  "name": "User-Directory",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
